--- a/src/app/user/product-details/product-details.component.html
+++ b/src/app/user/product-details/product-details.component.html
@@ -1,1 +1,13 @@
 <p>product-details works!</p>
+<mat-card>
+  <img mat-card-image [src]="product.image" alt="Product Image">
+  <mat-card-header>
+    <mat-card-title>{{ product.name }}</mat-card-title>
+    <mat-card-subtitle>{{ product.artist }}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{ product.description }}</p>
+    <p>Price: ${{ product.price }}</p>
+  </mat-card-content>
+  <!-- Add any additional product details you want to display -->
+</mat-card>
