--- a/src/app/user/products/products.component.html
+++ b/src/app/user/products/products.component.html
@@ -1,1 +1,62 @@
 <p>products works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Products</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search">
+    </mat-form-field>
+
+    <!-- Side Filter Nav -->
+    <mat-sidenav-container>
+      <mat-sidenav opened mode="side" class="sidenav">
+        <mat-checkbox>Filter 1</mat-checkbox>
+        <mat-checkbox>Filter 2</mat-checkbox>
+        <!-- Add more filters as needed -->
+      </mat-sidenav>
+    </mat-sidenav-container>
+
+    <!-- Product List -->
+    <mat-table [dataSource]="dataSource" matSort>
+
+      <!-- Define columns for your table -->
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+        <mat-cell *matCellDef="let product">{{ product.name }}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="description">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Description</mat-header-cell>
+        <mat-cell *matCellDef="let product">{{ product.description }}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="price">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Price</mat-header-cell>
+        <mat-cell *matCellDef="let product">{{ product.price | currency }}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="artist">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Artist</mat-header-cell>
+        <mat-cell *matCellDef="let product">{{ product.artist }}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="type">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Type</mat-header-cell>
+        <mat-cell *matCellDef="let product">{{ product.type }}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
+        <mat-cell *matCellDef="let product">{{ product.date | date }}</mat-cell>
+      </ng-container>
+
+      <!-- Add more columns as needed -->
+
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25]" showFirstLastButtons></mat-paginator>
+  </mat-card-content>
+</mat-card>
