--- a/src/app/user/product-details/product-details.component.html
+++ b/src/app/user/product-details/product-details.component.html
@@ -1,4 +1,6 @@
 <p>product-details works!</p>
+
+<app-header-home></app-header-home>
 <mat-card>
   <img mat-card-image [src]="product.image" alt="Product Image">
   <mat-card-header>
