--- a/src/app/user/products/products.component.html
+++ b/src/app/user/products/products.component.html
@@ -1,4 +1,6 @@
 <p>products works!</p>
+
+<app-header-home></app-header-home>
 <mat-card>
   <mat-card-header>
     <mat-card-title>Products</mat-card-title>
