--- a/src/app/user/cart/cart.component.html
+++ b/src/app/user/cart/cart.component.html
@@ -1,4 +1,5 @@
 <p>cart works!</p>
+<app-header-home></app-header-home>
 <mat-card>
   <mat-card-title>Shopping Cart</mat-card-title>
   <mat-divider></mat-divider>
