--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -13,6 +13,7 @@
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Login</button>
   </form>
+  <a id="resetPsd" href="">forget password?</a>
 </mat-card>
 </div>
 
