--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -29,5 +29,9 @@
   background-color: #fff;
   padding: 10px;
   box-shadow: 0 0 3px 3px rgba(0,0,0,0.2);
- 
+
+}
+#resetPsd{
+  text-decoration: underline;
+  
 }
