--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,8 +1,9 @@
 <p>home works!</p>
 <app-header-home></app-header-home>
 <!-- Featured Artworks Section -->
-<section class="featured-artworks">
-  <h2>Featured Artworks</h2>
+<div class="homeContainer"></div>
+<h2>Featured Artworks<fa-icon [icon]="faCartPlus"></fa-icon></h2>
+<section class="featured-artworks grid">
   <!-- Use Angular Material cards to display featured artworks -->
   <mat-card *ngFor="let artwork of featuredArtworks" class="artwork-card">
     <img mat-card-image [src]="artwork.image" alt="{{ artwork.title }}">
@@ -14,7 +15,7 @@
   </mat-card>
 </section>
 <!-- Featured Artists Section -->
-<mat-grid-list cols="3" rowHeight="300px">
+<!-- <mat-grid-list cols="3" rowHeight="200px">
   <mat-grid-tile *ngFor="let artwork of featuredArtworks">
     <mat-card class="artwork-card">
       <img mat-card-image [src]="artwork.image" alt="{{ artwork.title }}">
@@ -25,16 +26,50 @@
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
-</mat-grid-list>
+</mat-grid-list> -->
+<mat-card *ngFor="let artwork of featuredArtworks" class="artwork-card mat-elevation-z2" (mouseover)="artwork.elevation = 8" (mouseleave)="artwork.elevation = 2" [class.mat-elevation-z8]="artwork.elevation === 8">
+  <img mat-card-image [src]="artwork.image" alt="{{ artwork.title }}">
+  <div class="overlay" *ngIf="artwork.elevation === 8">
+    <button mat-button color="primary" (click)="viewArtworkDetails(artwork.id)">View Details</button>
+  </div>
+  <mat-card-title>{{ artwork.title }}</mat-card-title>
+  <mat-card-subtitle>{{ artwork.artist }}</mat-card-subtitle>
+  <mat-card-actions>
+    <button mat-button color="primary" (click)="viewArtworkDetails(artwork.id)">View Details</button>
+  </mat-card-actions>
+</mat-card>
+ <!-- carousel -->
+
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../../../assets/paradiseVacation.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/enormousTree.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/betterHalfReality.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
 <section class="featured-artworks">
   <h2>Featured Artworks</h2>
   <mat-grid-list cols="3" rowHeight="300px">
-    <mat-grid-tile *ngFor="let artwork of featuredArtworks">
-      <div
-        class="artwork-card"
+    <mat-grid-tile *ngFor="let artwork of featuredArtworks"  class="artwork-card"
         (mouseenter)="hoveredArtwork = artwork"
-        (mouseleave)="hoveredArtwork = null"
+        (mouseleave)="hoveredArtwork = null">
+
+
       >
         <img mat-card-image [src]="artwork.image" alt="{{ artwork.title }}">
         <mat-card-title>{{ artwork.title }}</mat-card-title>
@@ -45,10 +80,30 @@
           </button>
           <button mat-button color="primary" (click)="viewArtworkDetails(artwork.id)">View Details</button>
         </mat-card-actions>
-      </div>
+
     </mat-grid-tile>
   </mat-grid-list>
 </section>
+
+
+  <div class="card">
+    <div class="card__side card__side--front" id="front-1">
+      <div class="text-box">
+        <h3 class="text-box-top">Flipping Cards</h3>
+        <h1 class="text-box-middle">Awesome!</h1>
+        <h3 class="text-box-lower">--- More Text ---</h3>
+      </div>
+    </div>
+    <div class="card__side card__side--back" id="back-1">
+      <div class="text-box">
+        <h3 class="text-box-top">Cards Flipped</h3>
+        <h1 class="text-box-middle">Great!</h1>
+        <h3 class="text-box-lower">--- More Text ---</h3>
+      </div>
+    </div>
+  </div>
+
+
 
 <!-- Gallery Introduction Section -->
 <section class="gallery-introduction">
@@ -93,3 +148,4 @@
     <p><strong>{{ testimonial.author }}</strong></p>
   </mat-card>
 </section>
+<script src="./effects.js"></script>
