--- a/src/app/user/home/home.component.scss
+++ b/src/app/user/home/home.component.scss
@@ -38,14 +38,15 @@
 
 /* Artists Spotlight Section */
 .artists-spotlight {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+
+  grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-between;
-  margin: 20px;
+  margin: 2px;
 }
 
 .artist-card {
-  width: calc(33.33% - 20px);
+  width: 200px;
   margin-bottom: 20px;
 }
 
@@ -53,6 +54,9 @@
 .artist-card .mat-card-image {
   height: 200px; /* Adjust image height */
   object-fit: cover; /* Maintain aspect ratio and cover the card */
+
+height: 200px; /* Adjust image height */
+object-fit: cover; /* Maintain aspect ratio and cover the card */
 }
 
 /* Center artist card title */
@@ -120,3 +124,178 @@ a:hover {
 .artwork-card:hover .mat-card-actions {
   opacity: 1;
 }
+h2{
+  display:inline-block;
+}
+
+/* Add this CSS to your component's styles or global styles */
+.artwork-item {
+  display: flex; /* Use flexbox to arrange items horizontally */
+  flex-direction: column; /* Arrange items vertically within each tile */
+  align-items: center; /* Center items horizontally within each tile */
+}
+
+.artwork-image {
+  width: 100%; /* Set the width to 100% to fit within the grid tile */
+  height: auto; /* Maintain the aspect ratio of the images */
+  max-width: 100%; /* Ensure images don't exceed the tile's width */
+  max-height: 100%; /* Ensure images don't exceed the tile's height */
+}
+
+.artwork-details {
+  flex-grow: 1; /* Allow details to grow and take available space */
+  text-align: center; /* Center-align text within the details div */
+  padding: 8px; /* Add padding for spacing */
+}
+.d-block,.carousel-inner {
+  height:500px;
+  width:80vw;
+}
+.carousel {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+.artwork-card {
+  position: relative;
+  // display: grid;
+  // grid-template-columns:fr fr fr ;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.artwork-card {
+
+}
+
+.artwork-card img {
+  grid-row: 1 / -1;
+  object-fit: cover;
+  height: 400px;
+}
+
+// flipping cards
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 25rem;
+  width: 100%;
+  transition: all ease-in-out 5s;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card:active {
+  transform: translateY(-1px);
+}
+
+.card__side {
+  transition: all 0.8s ease;
+  color: white;
+  font-size: 2rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25rem;
+  width: 100%;
+  backface-visibility: hidden;
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.4);
+  border-radius: 8px;
+}
+
+.card__side--front {
+  background-color: #2196f3;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card__side--back {
+  background-color: #303f9f;
+  transform: rotateY(180deg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.showGreen {
+  transform: rotateY(-180deg);
+}
+
+.showRed {
+  transform: rotateY(0);
+}
+
+.text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+}
+
+.text-box-top {
+  font-size: 2.2rem;
+  text-shadow: 2px 2px 10px #0000006c;
+  font-weight: 400;
+}
+
+.text-box-middle {
+  font-size: 5.5rem;
+  font-weight: 700;
+  text-shadow: 2px 2px 10px #0000006c;
+}
+
+.text-box-lower {
+  font-size: 2rem;
+  text-shadow: 2px 2px 10px #0000006c;
+  font-weight: 400;
+}
+
+.heading {
+  transition: all 0.6s linear;
+}
+
+.hide {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+#front-1 {
+  background-image: linear-gradient(
+      rgba(204, 30, 88, 0.6),
+      rgba(20, 20, 20, 0.6)
+    ),
+    url("https://images.unsplash.com/photo-1527529482837-4698179dc6ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80");
+}
+#front-2 {
+  background-image: linear-gradient(
+      rgba(31, 136, 168, 0.767),
+      rgba(14, 46, 65, 0.9)
+    ),
+    url("https://images.unsplash.com/photo-1508599804355-8ce5238b44b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80");
+}
+
