--- a/src/app/admin/admin-log-in/admin-log-in.component.html
+++ b/src/app/admin/admin-log-in/admin-log-in.component.html
@@ -1,1 +1,19 @@
 <p>admin-log-in works!</p>
+<app-header></app-header>
+<p>login works!</p>
+
+<div class="container">
+  <mat-card class="elevation-z24 logInCard">
+  <h2 id="title">Login</h2>
+  <form class="logInForm">
+    <mat-form-field>
+      <input matInput placeholder="Email" type="email">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Password" type="password">
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit">Login</button>
+  </form>
+  <a id="resetPsd" href="">forget password?</a>
+</mat-card>
+</div>
