--- a/src/app/admin/admin-log-in/admin-log-in.component.html
+++ b/src/app/admin/admin-log-in/admin-log-in.component.html
@@ -1,5 +1,5 @@
 <p>admin-log-in works!</p>
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <p>login works!</p>
 
 <div class="container">
@@ -17,3 +17,7 @@
   <a id="resetPsd" href="">forget password?</a>
 </mat-card>
 </div>
+ <mat-form-field>
+  <input matInput placeholder="Placeholder">
+</mat-form-field>
+
