--- a/src/app/shared/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/shared/admin-sidenav/admin-sidenav.component.html
@@ -1,3 +1,4 @@
+<p>admin-sidenav works!</p>
 <div class="dashboard">
   <mat-sidenav-container>
     <mat-sidenav #sidenav mode="side" [opened]="!isSidenavOpen">
@@ -5,7 +6,7 @@
         <div class="logo-image">
           <img src="images/logo.png" alt="">
         </div>
-        <span class="logo_name">CodingLab</span>
+        <span class="logo_name">Artwork Administration Portal</span>
       </div>
       <div class="nav-links">
         <a class="nav-link" href="#" (click)="navigateTo('Dashboard')">
