--- a/src/app/authentication/logout/logout.component.html
+++ b/src/app/authentication/logout/logout.component.html
@@ -1,5 +1,8 @@
+<p>logout works!</p>
+
 <p>admin-logout works!</p>
 <!-- logout.component.html -->
+<app-header-home></app-header-home>
 
 <div class="centered-card">
   <mat-card>
